# roster

./: .gitignore  .python-version  Dockerfile  README.md  blackjack.py  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  reset_local.sh  setup.py
agents/: __init__.py  base.py  openai.py
code_index/: constants.py  errors.py  logs.py  main.py  settings.py  singletons.py
code_index/api/: activity.py  agent.py  commands.py  github.py  identity.py  team.py  updates.py  workflow.py
code_index/db/: etcd.py  postgres.py
code_index/events/: resource.py
code_index/github/: app.py  service.py
code_index/informers/: base.py
code_index/messaging/: inbox.py  rabbitmq.py  workflow.py
code_index/models/: activity.py  agent.py  base.py  chat.py  identity.py  outputs.py  team.py  tool.py  workflow.py  workspace.py
code_index/services/: activity.py  agent.py  identity.py  team.py  workflow.py  workspace.py
code_index/util/: graph_ops.py  serialization.py
code_index/watchers/: all.py  base.py  etcd.py  resource.py
code_index/workspace/: git.py  manager.py
examples/: chat.json  fix_bug.json  implement_feature.json  product_manager.json  roster_team.json  web_developer.json
examples/agents/: product_manager.json  web_developer.json
examples/identities/: charlie.json  david.json
examples/teams/: roster_team.json
examples/updated_design/: product_manager.json  roster_team.json  web_developer.json
examples/workflows/: fix_bug.json  implement_feature.json  process_codebase.json
prompts/: autogpt.txt  baby_agi.txt  generative_agents.txt  metaprompt.txt  react_tools.txt  reflexion.txt
resources/: __init__.py  agent.py
resources/samples/: simple_agent.yml
roster_api/: constants.py  errors.py  main.py  settings.py  singletons.py
roster_api/api/: activity.py  agent.py  commands.py  github.py  identity.py  role.py  task.py  team.py  team_layout.py  updates.py  workflow.py
roster_ctl/: cli.py  errors.py  main.py
(+58 files in other folders)
