[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "code-index"
version = "0.1.0"
description = "Unnamed Code Indexer"
authors = ["Evan Doyle <evanmdoyle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
asyncpg = "^0.27.0"
protobuf = "==3.20.3"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
environs = "^9.5.0"
aiohttp = "^3.8.4"
PyGithub = "^1.59.1"
GitPython = "^3.1.34"

[tool.poetry.dev-dependencies]
black = "==23.3.0"
pytest = "==7.3.1"

[tool.poetry.scripts]
code-index = "code_index:main"
