[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "code-index"
version = "0.1.0"
description = "Unnamed Code Indexer"
authors = ["Evan Doyle <evanmdoyle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
aio-pika = "^9.2.2"
asyncpg = "^0.28.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
environs = "^9.5.0"
aiohttp = "^3.8.4"
PyGithub = "^1.59.1"
GitPython = "^3.1.34"
openai = "^0.27.10"
tenacity = "^8.2.3"

[tool.poetry.dev-dependencies]
black = "==23.10.0"
pytest = "==7.4.2"
isort = "==5.12.0"

[tool.poetry.scripts]
code-index = "code_index:main"
